--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "dependencies": {
     "await-notify": "1.0.1",
+    "sqlite3": "5.0.2",
     "vscode-debugadapter": "^1.47.0"
   },
   "devDependencies": {
+    "@types/sqlite3": "^3.1.7",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.37",
