--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "lint": "eslint src --ext ts",
     "watch": "webpack --watch --devtool nosources-source-map --info-verbosity verbose --config ./build/extension.webpack.config.js",
     "watch2": "tsc -watch -p ./",
-    "pretest": "yarn run compile && yarn run lint",
-    "test": "./node_modules/mocha/bin/mocha --require ./node_modules/ts-node/register src/**/*.spec.ts",
+    "test": "./node_modules/mocha/bin/mocha --require ./node_modules/ts-node/register --timeout 50000 src/**/*.spec.ts",
     "package-ext": "webpack --mode production --config ./build/extension.webpack.config.js"
   },
   "dependencies": {
