--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
+    "@types/lodash.get": "^4.4.2",
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.37",
     "@types/vscode": "^1.55.0",
