--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,8 @@
 		"inlineSourceMap": false,
 		"preserveConstEnums": true,
 		"strictNullChecks": true,
-		"noUnusedParameters": false
+		"noUnusedParameters": false,
+		"esModuleInterop": true,
 	},
 	"exclude": [
 		"node_modules"
